<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".scandetails.ScanDetailFragment">

    <TextView
        android:id="@+id/tv_scan_details"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/scan_details"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_scan_data_details"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/scan_data_details"
        app:layout_constraintTop_toBottomOf="@id/tv_scan_details" />

    <TextView
        android:id="@+id/tv_scan_raw_point_count"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/scan_raw_point_count"
        app:layout_constraintTop_toBottomOf="@id/tv_scan_data_details" />

    <com.google.android.material.divider.MaterialDivider
        android:id="@+id/details_divider"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@id/tv_scan_raw_point_count" />

    <TextView
        android:id="@+id/btn_scan"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:focusable="true"
        android:gravity="center"
        android:padding="16dp"
        android:text="@string/btn_scan"
        app:layout_constraintTop_toBottomOf="@id/details_divider" />

    <com.google.android.material.divider.MaterialDivider
        android:id="@+id/bottom_divider"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/btn_scan" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_postprocessors"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/bottom_divider"
        tools:listitem="@layout/item_postprocessor" />

</androidx.constraintlayout.widget.ConstraintLayout>
